--- a/Property FW and wreath products/Bouts/ends_v3.tex
+++ b/Property FW and wreath products/Bouts/ends_v3.tex
@@ -93,7 +93,7 @@ The group property FW stands in-between the celebrated Kazdhan's property (T) an
 
 It follows from the work of Y. Cornulier that a finitely generated wreath product $G\wr_XH$ has property FW if and only if both $G$ and $H$ have property FW and $X$ is finite.
 %In this paper, we will present a more explicit combinatorial elementary proof using Schreier graphs.
-The aim of this paper is to give an elementary, direct and explicit proof of this fact using Schreier graphs.\PH{Légèrement reformulé.}
+The aim of this paper is to give an elementary, direct and explicit proof of this fact using Schreier graphs.
 \end{abstract}
 %
 %
