--- a/Property FW and wreath products/Medians/Median.tex
+++ b/Property FW and wreath products/Medians/Median.tex
@@ -102,12 +102,12 @@
 %
 %
 \begin{abstract}
-If \CatS{} is subcategory of metric spaces, we say that a group G has property~\BS{} if any isometric action on a \CatS-space has bounded orbits.
-Examples of such subcategories include metric spaces, affine real Hilbert spaces, CAT(0) cube complexes, connected median graphs, trees or ultra-metric spaces.
+If \CatS{} is a subcategory of metric spaces, we say that a group G has property~\BS{} if any isometric action on a \CatS-space has bounded orbits.
+Examples of such subcategories include metric spaces, affine real Hilbert spaces, CAT(0) cube complexes, connected median graphs, trees or ultra-metric spaces. 
 The corresponding properties \BS{} are respectively Bergman's property, property~\FH{}  (which, for countable groups, is equivalent to the celebrated Kazhdan's property (T)), property~\FW{} (both for CAT(0) cube complexes and for connected median graphs), property~\FA{} and uncountable cofinality.
-Historically many\PH{Ajout ``many''. uncountable cof n'est pas une propriété de points fixes} of these properties were defined using the existence of fixed points, but in some cases this is equivalent.
+Historically many of these properties were defined using the existence of fixed points, but in some cases this is equivalent.
 
-Our main result is that for many\PH{``a large class of''$\to$``many''} subcategories \CatS, the wreath product $G\wr_XH$ has property~\BS{} if and only if both $G$ and $H$ have property~\BS{} and $X$ is finite.
+Our main result is that for many subcategories \CatS, the wreath product $G\wr_XH$ has property~\BS{} if and only if both $G$ and $H$ have property~\BS{} and $X$ is finite.
 On one hand, this encompasses in a general setting previously known results for properties \FH{} and \FW.
 On the other hand, this also applies to the Bergman's property.
 Finally, we also obtain that $G\wr_XH$ has uncountable cofinality if and only if both $G$ and $H$ have uncountable cofinality and $H$ acts on $X$ with finitely many orbits.
@@ -191,8 +191,7 @@ It is straightforward to prove that the wreath product $G \wr_X H$ is finitely g
 Theorem~\ref{Thm:PropFW} was first proved, using \emph{cardinal definite functions}, by Cornulier \cite{Cornulier2013} for arbitrary groups, but without the implication ``if $G \wr_X H$ has property~\FW, then $G$ has property \FW''.
 The authors then gave an elementary proof of it via \emph{Schreier graphs} for the specific case of finitely generated groups \cite{LS2020}.
 Y. Stalder has let us know (private communication) that, using \emph{space with walls} instead of Schreier graphs, the arguments of~\cite{LS2020} can be adapted to replace the finite generation hypothesis of Theorem~\ref{Thm:PropFW} by the condition that all three of $G$, $H$ and $X$ are at most countable.
-Finally, A. Genevois published in~\cite{2017arXiv170500834G} a proof of Theorem~\ref{Thm:PropFW} for wreath products of the form $G\wr_HH$, based on his \emph{diadem product of spaces}.\PH{J'ai complètement réécrit ce §.}
-
+Finally, A. Genevois published in~\cite{2017arXiv170500834G} a proof of Theorem~\ref{Thm:PropFW} for wreath products of the form $G\wr_HH$, based on his \emph{diadem product of spaces}.
 
 The above results on properties \FH, \FW{} and \FA{} were obtained with distinct methods even if the final results have a common flavor.
 In the same time, all three properties \FH, \FW{}  and \FA{} can be characterized by the fact that any isometric action on a suitable metric space (respectively affine real Hilbert space, connected median graph and tree) has bounded orbits, see Definition~\ref{Def:FHFA}.
@@ -422,14 +421,13 @@ In the above, we insisted on the fact that actions are supposed to preserve the 
 This is sometimes automatic, as for example any isometry of a real Banach or Hilbert space is affine by the Mazur-Ulam theorem.
 However, for graphs this is not the case; a $2$-regular tree has automorphism group $\Z\rtimes(\Z/2\Z)$, while the automorphism group of its geometric realization (the line $\R$) is $\R\rtimes(\Z/2\Z)$.
 In other words, an isometry of a graph is not necessarily a graph isomorphism.
-In the following, we will often do a slight abuse of notation and simply speak of a \emph{group action} on a space $X$, without always specifying by which kinds of maps the group acts, which should always be clear from the context.\GS{Sens de ce paragraphe. Est ce utile ?}\PH{Ça évite de à chaque fois préciser ``$G$ agit par isométries affines sur un Hilbert'' (par ex) et de simplement dire ``$G$ agit sur un Hilbert''.}
+In the following, we will often do a slight abuse of notation and simply speak of a \emph{group action} on a space $X$, without always specifying by which kinds of maps the group acts, which should always be clear from the context.
 
 %
 %
 %\begin{rem}
 The names \FB, \FH, \FW,  \FR{} and \FA{} come from the fact that these properties admit a description in terms of (and were fist studied in the context of) the existence of a Fixed point for actions on reflexive Banach spaces, on Hilbert spaces, on spaces with Walls (or equivalently on CAT(0) cube complexes), on real trees and on trees (\emph{Arbres} in french).
-However this is equivalent with the bounded orbit property see Proposition~\ref{Proposition:Mediane} and the discussion below~it. \GS{Ajout de ce § comme une remarque}
-\PH{Je trouve que c'est mieux en le laissant en §, afin d'éviter de surcharger. De toute façon, on en discute en long et en large plus tard. Mais si tu veux revenir à la remarque, je ne me battrai pas.}
+However this is equivalent with the bounded orbit property see Proposition~\ref{Proposition:Mediane} and the discussion below~it.
 %\end{rem}
 
 
@@ -480,7 +478,7 @@ Finally, Minasyan constructed examples of groups with \FA{} but without \FR{} in
 %
 %
 It is possible to consider relative versions of the properties appearing in Definition~\ref{Def:FHFA}.
-Let \CatS{} be any classes of metric spaces considered in Definition~\ref{Def:FHFA} and let \BS{} be the corresponding group property.\PH{Ajouté cette phrase pour clarifier.}
+Let \CatS{} be any classes of metric spaces considered in Definition~\ref{Def:FHFA} and let \BS{} be the corresponding group property.
 If $G$ is a group and $H$ a subgroup of $G$, we say that the pair $(G,H)$ has \emph{relative property~\BS} if for every $G$ action on a \CatS-space, the $H$ orbits are bounded.
 A group $G$ has property~\BS{} if and only if for every subgroup $H$ the pair $(G,H)$ has relative property~\BS{}, and if and only if for every overgroup $L$ the pair $(L,G)$ has relative property~\BS.
 %
@@ -514,7 +512,7 @@ A \emph{pseudo-metric space} is a set $X$ with a map $d\colon X\times X\to \R_{\
 %
 %
 If moreover $d(x,y)\neq 0$ for $x\neq y$, the map $d$ is a \emph{distance} and $(X,d)$ is a metric space.
-On the other hand, an \emph{ultra-pseudo-metric space} is a pseudo-metric space $(X,d)$ such that $d$ satisfies the strong triangular inequality: $d(x,z)\leq \max\{d(x,y),d(y,z)\}$.\PH{Ajouté le rappel de l'inégalité.}
+On the other hand, an \emph{ultra-pseudo-metric space} is a pseudo-metric space $(X,d)$ such that $d$ satisfies the strong triangular inequality: $d(x,z)\leq \max\{d(x,y),d(y,z)\}$.
 A \emph{morphism} (or \emph{short map}) between two pseudo-metric spaces $(X_1,d_1)$ and $(X_2,d_2)$ is a distance non-increasing map $f\colon X_1\to X_2$, that is $d_2(f(x),f(y))\leq d_1(x,y)$ for any $x$ and $y$ in $X_1$.
 If $f$ is bijective and distance preserving, then it is an \emph{isomorphism} (or \emph{isometry}).
 Pseudo-metric spaces with short maps form a category $\PMet$, of which the category of metric spaces (with short maps) $\category{Met}$ is a full subcategory.
@@ -655,7 +653,7 @@ On the other hand, trees do not have Cartesian powers.
 This subsection is devoted to variations and generalizations of property~\BS.
 It is intended as a note for the interested reader, and can be skipped without any harm.\PH{Est-ce que l'intro te va ? Ou as-tu une meilleure idée ?}
 
-As noted in the introduction, a group $G$ has property~\BS{} if and only any $G$ action on a $\category S$ space has at least one bounded orbit.
+As noted in the introduction, a group $G$ has property~\BS{} if and only any $G$ action on a \CatS-space has at least one bounded orbit.
 One implication is trivial and the other is a direct application of the triangle inequality.\PH{Rajouté ce~§. On garde ?}
 %
 %
@@ -709,7 +707,7 @@ Then the orbits are still the~$\mathcal L_n$, but this time with diameter $n$.
 \paragraph{Topological groups}
 One can wonder what happens for topological groups. While, the wreath product of topological groups is not in general a topological group, this is the case if $G$ is discrete and $X$ is a discrete set endowed with a continuous $H$ action.
 In this particular context, Theorem~\ref{Thm:Technic}, as well as its proof, remains true.
-The details are let to the interested reader.\PH{Ajouté tout le § sur groupes tops}
+The details are let to the interested reader.
 %
 %
 %
@@ -816,7 +814,7 @@ If $G$ has property~\BS, then so has $H$.
 \end{lem}
 \begin{proof}
 We have $H\cong G/N$.
-If $H$ acts on some \CatS-space $X$ with an unbounded orbit, then the surjection $G\twoheadrightarrow H$ gives us a $G$ action on~$X$, with the same orbits as the $H$ action.\PH{J'ai réécrit la preuve}
+If $H$ acts on some \CatS-space $X$ with an unbounded orbit, then the surjection $G\twoheadrightarrow H$ gives us a $G$ action on~$X$, with the same orbits as the $H$ action.
 %If $H$ acts continuously\PH{J'ai réécrit la preuve} on some \CatS-space $X$ with an unbounded orbit, then the surjection $G\twoheadrightarrow H$ gives us a continuous $G$ action on~$X$, with the same orbits as the $H$ action.
 \end{proof}
 %
@@ -899,7 +897,7 @@ Hence, the orbit $G.x$ is bounded.
 Since the square graph, which is not median, is a quotient of the $2$-regular infinite tree by a subgroup of isometries, the proof of Proposition~\ref{Prop:Extension} does not carry over for properties \FW{} and \FA.
 Similarly, the quotient of $\R$ by the action of $\Z/2\Z$ given by $x\mapsto-x$ is not a Banach space and hence the proof of Proposition~\ref{Prop:Extension} does not apply to properties \FH{} and \FB.
 However, the statement of Proposition~\ref{Prop:Extension} (stability under extension) remains true for properties \FH, \FB, \FW{} and \FA.
-For properties \FH{} and \FB, this follows from the fixed-point definition and the fact that a non-empty closed subset of an Hilbert space (respectively of a reflexive Banach space) is an Hilbert space (respectively a reflexive Banach space) itself.\PH{Rajouté le passage sur \FB.}
+For properties \FH{} and \FB, this follows from the fixed-point definition and the fact that a non-empty closed subset of an Hilbert space (respectively of a reflexive Banach space) is an Hilbert space (respectively a reflexive Banach space) itself.
 For property~\FW{} and \FA, see~\cite{Cornulier2013} and~\cite{MR0476875}.
 
 %\PHInline{Je me suis arrêté ici dans ma relecture.}
